# CXXStateTree

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  codecov.yaml  config_CXXStateTree.json  config_CXXStateTree.prologue
.github/workflows/: coverage.yml  test.yml
examples/: basic.cpp  context_example.cpp  export_dot.cpp  export_dot_context.cpp  export_dot_nested.cpp  nested.cpp
include/CXXStateTree/: Builder.hpp  ContextUtil.hpp  IGuard.h  State.h  State.hpp  StateTree.h  StateTree.hpp  Transition.h  Transition.hpp
src/CXXStateTree/: State.cpp  StateTree.cpp
tests/: state_tree_singleheader_test.cpp  state_tree_test.cpp
